K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stocksim
  namespace: stocksim
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: stocksim.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: web, port: { number: 8080 } } }
    - host: marketfeed.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: marketfeed, port: { number: 8080 } } }
